--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "~4.0",
-        "prismic/php-sdk": "dev-master"
+        "prismic/php-sdk": "^3.0"
     },
     "autoload": {
         "psr-0": {
